# learn_rcore

easy-fs/: Cargo.toml
easy-fs/src/: efs.rs  vfs.rs
os/: .gitignore  Cargo.toml  Makefile  build.rs
os/src/: batch.rs  config.rs  lang_items.rs  loader.rs  logging.rs  main.rs  sbi.rs  timer.rs
os/src/boards/: mod.rs  qemu.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/drivers/gpu/: mod.rs
os/src/drivers/input/: mod.rs
os/src/fs/: inode.rs  mod.rs  pipe.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: mod.rs  semaphore.rs  up.rs
os/src/syscall/: fs.rs  gui.rs  mod.rs  process.rs  sync.rs
os/src/task/: context.rs  manager.rs  mod.rs  process.rs  processor.rs  signal.rs  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml  Makefile
user/src/: console.rs  io.rs  lang_items.rs  lib.rs  syscall.rs
