[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
log = "0.4.27"

[profile.release]
debug = true

[features]
test = []  # 空测试特性
